[package]
edition = "2021"
name = "qr-web"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4.3"
base64 = "0.13.0"
image = "0.23.14"
qrcode = "0.12.0"
serde = {version = "1.0.133", features = ["derive"]}
tokio = {version = "1.15.0", features = ["full"]}
tracing = "0.1.29"
tracing-subscriber = {version = "0.3.4", features = ["env-filter"]}
